//package wanyou.game.protocol;
//工会商店升级

import "GuildInfo.proto";

message BseGuildShopLevelup
{
		optional int32 result = 1;
		optional GuildInfo guildInfo = 2 ;
}