//package wanyou.game.protocol;
//工会列表的项

message GuildSimpleInfo
{
	required int32  guildID = 1;           //公会ID
    optional string guildName = 2;         //公会名
    optional string leaderName = 3;        //会长名字
    optional uint32 guildMemberCnt = 4;    //人数
    optional uint32 guildLevel = 5;        //等级
    optional uint32 guildCredit = 6;       //功勋
    optional string announcements  = 7;    //公会宣言
}
